--- a/wsgi/mysite/templates/linguo/base.html
+++ b/wsgi/mysite/templates/linguo/base.html
@@ -29,10 +29,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/linguo/">Home</a></li>
-            <li class=""><a href="/linguo/profile">Find Linguists</a>
-            <li><a href="/linguo/chat">Chat</a></li>
-            <li><a href="/linguo/logout">Logout</a></li>
+            <li class="selectedBar active"><a href="/linguo/">Home</a></li>
+            <li class="searchBar"><a href="/linguo/search">Find Linguists</a>
+            <li class="chatBar"><a href="/linguo/chat">Chat</a></li>
+            <li class=""><a href="/linguo/logout">Logout</a></li>
             <li>
               <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
