--- a/wsgi/mysite/templates/linguo/chat.html
+++ b/wsgi/mysite/templates/linguo/chat.html
@@ -22,7 +22,7 @@
 	<div id="chat_list"class="list-group col-md-3 visible-md visible-lg" style="margin-top:90px;">
 		{% for i in userProfile.friends.all %}
 			{% if i.name == talker %}
-		  		<a href="#" class="list-group-item active talker" name="{{i.name}}">
+		  		<a href="#" class="list-group-item active talker" name="{{i}}">
 			  		<span class="badge">14</span>
 					{{i.name}}
 			  	</a>
@@ -122,20 +122,10 @@ function createMessage(data){
 	
 }
 
-//select linguist to talk to
-$(".list-group-item").click(function(){
-	$(".talker").attr("class", "list-group-item");
-	$(this).attr("class", "list-group-item active talker");
-	var talker = $(this).attr("name");
+//change NarBar
+$(".selectedBar").attr("class", "navBar");
+$(".chatBar").attr("class", "selectedBar active");
 
-	$.get('/linguo/get_message', {'receiver':talker}, function(data){
-		// add messages to the content
-		$("#messageContent").empty();
-		createMessage(data);
-		
-	})
-
-});
 
 
 </script>
